--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0;
-  background-color: rgb(122, 35, 146);
+  background-color: rgb(82, 78, 83);
   background-image: url('wao.gif');
   background-size: cover;
   background-position: center;
@@ -41,9 +41,9 @@ body {
 }
 
 .right a {
-  color: rgb(0, 255, 17);
+  color: rgb(16, 241, 249);
   transition: color 0.3s ease-in-out;
-  background-color: rgb(58, 16, 16);
+  background-color: rgb(0, 0, 0);
   font-size: 34px;
 }
 
@@ -66,6 +66,10 @@ body {
 .container p,
 .container li {
   color: white;
+}
+
+.progress-container {
+  width: 600px;
 }
 
 .progress-bar {
