--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0;
-  background-color: rgb(82, 78, 83);
+  background-color: rgba(74, 53, 120, 0.756);
   background-image: url('media/wao.gif');
   background-size: cover;
   background-position: center;
@@ -43,8 +43,8 @@ body {
 .right a {
   color: rgb(16, 241, 249);
   transition: color 0.3s ease-in-out;
-  background-color: rgb(0, 0, 0);
-  font-size: 34px;
+  background-color: rgba(6, 2, 54, 0.553);
+  font-size: 30px;
 }
 
 .right a:hover {
