--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,22 @@ html,
 body {
   height: 100%;
   margin: 0;
-  background-color: rgba(74, 53, 120, 0.756);
-  background-image: url('media/wao.gif');
-  background-size: cover;
-  background-position: center;
-  background-blend-mode: difference;
+  background-color: rgba(81,163,203,255);
+  background-image: url('https://images.squarespace-cdn.com/content/v1/551a19f8e4b0e8322a93850a/1573861378175-CUPY0J566KA5A117IIEE/Intro_Parallax.gif?format=1500w');
+  background-size: 40%;
+  background-repeat: repeat-x;
+  background-position: 0% 0%;
+  animation: scrollBackground 70s linear infinite; /* Use 'animation' property to apply the animation */
+}
+
+/* Define the keyframes for the scroll animation */
+@keyframes scrollBackground {
+  from {
+    background-position: 0%; /* Start from the left side */
+  }
+  to {
+    background-position: -100%; /* End at the right side */
+  }
 }
 
 .container {
@@ -42,23 +53,21 @@ body {
 
 .right a {
   color: rgb(16, 241, 249);
-  transition: color 0.3s ease-in-out;
-  background-color: rgba(6, 2, 54, 0.553);
+  box-shadow: inset 0 0 0 0 #0e0043;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+  background-color: rgba(103, 8, 6, 0.295);
   font-size: 30px;
+}
+
+.right .links a {
+  color: rgb(16, 241, 249);
+  background-color: transparent;
+  font-size: 50px;
 }
 
 .right a:hover {
   color: hotpink;
-}
-
-.right ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.right li {
-  margin-bottom: 10px;
+  box-shadow: inset 500px 0 0 0 #0e0043;
 }
 
 .container h1,
@@ -66,6 +75,7 @@ body {
 .container p,
 .container li {
   color: white;
+  font-family: Tahoma, sans-serif;
 }
 
 .progress-container {
